# Advent-of-Code-Solutions

./: aoc-solutions.cabal
.devcontainer/: Dockerfile  devcontainer.json
app/: Main.hs
src/Five/: Five.hs
src/Three/: Three.hs
src/Two/: Two.hs
src/one/: One.hs
